--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,8 @@
 name: ace_polymer
+version: 0.0.1
+description: A Polymer.dart component for the Cloud9 Ace text editor.
+author: Dan Schultz <schultz.t.dan@gmail.com>
+homepage: http://www.github.com/danschultz/ace_polymer.dart
 dependencies:
   ace: '>=0.5.4'
   browser: '>=0.10.0'
